[streams] update create update

--- a/app/views/stream_views/course_enroll.html.haml
+++ b/app/views/stream_views/course_enroll.html.haml
@@ -5,7 +5,7 @@
       %a(ng-href="/profiles/{{stream.user.slug}}")
         {{stream.user.name}}
       enrolled into the
-      %a(ng-href="/profiles/{{stream.trackable.course.path}}")
+      %a(ng-href="{{stream.trackable.course.path}}")
         {{stream.trackable.course.title}}
       Course.
       %small
