--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -43,7 +43,7 @@
                   .poll-item-vote-count
                     {{poll_item.votes_count}}
               %span(ng-switch-when='false')
-                .poll-item-btn(ng-click="voteObject(poll_item,$index); expandSocial()")
+                .poll-item-btn(ng-click="voteObject()")
                   %i.icon-angle-up
                   .poll-item-vote-count(ng-show='current_user_voted()')
                     {{poll_item.votes_count}}
