--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -33,6 +33,12 @@
   padding: 0px 0px 20px 0px 
   border-top: 1px solid #ccc
   float: left
+
+  // No pinterest. Would like a cleaner solution that knew how many buttons. maybe ng-class.
+  .spe-show-setup
+    &.spe-show-start
+      width: 400px
+
 .poll-item-vote-up
   width: 7% 
   margin-right: 1%
@@ -152,6 +158,7 @@
     font-size: 60px
     color: $orange
     margin: 100px 0px 2000px
+
 
 @media (max-width: 767px)
   .social-group
