--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -18,6 +18,8 @@
               = link_to course do
                 %h3= course.title
                 = image_tag filepicker_stream_image(course.featured_image)
+                .section.pull-right
+                  = where_user_left_off_in_course(course, current_user, 'btn btn-primary btn-large')
               .section
                 = course.short_description
           -else
