--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -106,10 +106,12 @@
           .timeline-end
           .timeline-left
             - @timeline_events.in_groups_of(2).map(&:first).compact.each do |event|
-              = render "events/#{event.trackable_type.underscore}/#{event.action}", event: event, direction: 'left'
+              - if event.trackable
+                = render "events/#{event.trackable_type.underscore}/#{event.action}", event: event, direction: 'left'
           .timeline-right
             - @timeline_events.in_groups_of(2).map(&:last).compact.each do |event|
-              = render "events/#{event.trackable_type.underscore}/#{event.action}", event: event, direction: 'right'
+              - if event.trackable
+                = render "events/#{event.trackable_type.underscore}/#{event.action}", event: event, direction: 'right'
         .text-center
           - if current_user == @user
             %h4= "You joined ChefSteps on"
