split test yes/no cta for social

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1148,6 +1148,13 @@ a:hover
   .share-text
     margin-bottom: 8px
 
+.social-popover.no_cta
+  .share-text
+    display: none !important
+  .contents
+    margin-top: 3px
+  height: 40px
+
 .social-popover-triangle
   position: absolute
   left: 100%
@@ -1862,6 +1869,7 @@ csingredienteditpair
 
     .social-popover-triangle
       display: none
+
     .social-popover
       @include boxsizing
       .share-text
