[polls] add status

--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -159,6 +159,19 @@
     color: $orange
     margin: 100px 0px 2000px
 
+.poll-index-item
+  position: relative
+  .poll-index-item-winner
+    position: absolute
+    top: 50px
+    left: -10px
+    width: 100%
+    text-align: center
+    background: white
+    border: 1px solid $orange
+    padding: 0px 10px
+    text-transform: uppercase
+    @include raleway
 
 @media (max-width: 767px)
   .social-group
