--- a/app/views/admin/polls/_form.html.haml
+++ b/app/views/admin/polls/_form.html.haml
@@ -3,7 +3,7 @@
     = f.input :title
     = f.input :description
     = render '/shared/filepicker_group', label_text: "Image", param: "poll[image_id]", value: @poll.image_id
-    / = f.input :status
+    = f.input :status, as: :select, collection: ['Open', 'Completed']
 
   %h2 Poll Items
   = link_to_add_fields "Add Poll Item", f, :poll_items
