--- a/app/views/polls/index.html.haml
+++ b/app/views/polls/index.html.haml
@@ -1,3 +1,7 @@
+- content_for :title, 'Polls'
+- content_for :description, "Here's your chance to vote on new content on recipes and courses the ChefSteps kitchen works on."
+- content_for :keywords, @polls.map(&:title).to_sentence
+
 .container
   .row
     .span12
@@ -8,7 +12,13 @@
   .container
     .row.section
       .span4
-        = render 'shared/media_box_2', url: poll_path(poll), title: poll.title, image: poll.image_id, object: poll
+        .poll-index-item
+          = render 'shared/media_box_2', url: poll_path(poll), title: poll.title, image: poll.image_id, object: poll
+          - if poll.status == 'Completed'
+            .poll-index-item-winner
+              %h5 Closed
+              %h5.text-orange
+                = "Winner: #{poll.poll_items.first.title}"
       .span8
         = link_to poll do
           %h2= poll.title
