--- a/app/views/layouts/_share_button.html.haml
+++ b/app/views/layouts/_share_button.html.haml
@@ -5,15 +5,13 @@
   .social-popover-triangle(ng-show="expandSocial" ng-animate="'spe'" )
   .social-popover(ng-show="expandSocial" ng-animate="'spe'" style="display: none;" ng-class='split')
     .contents
-      .share-text
-        = shareSuggestText || "Share this with your friends!"
-      .btn.btn-secondary.btn-social.btn-social-twitter(ng-click="shareTwitter()")
-        = render 'layouts/social_button', icon: "twitter", networkFriendlyName: "Twitter"
+      .btn.btn-secondary.btn-social.btn-social-twitter(ng-click="shareTwitter();")
+        = render 'layouts/social_button', icon: "twitter", networkFriendlyName: "Twitter", counter: "twitterCount"
       .btn.btn-secondary.btn-social.btn-social-facebook(ng-click="shareFacebook()")
-        = render 'layouts/social_button', icon: "facebook", networkFriendlyName: "Facebook"
+        = render 'layouts/social_button', icon: "facebook", networkFriendlyName: "Facebook", counter: "facebookCount"
       .btn.btn-secondary.btn-social.btn-social-gplus(ng-click="shareGooglePlus()")
-        = render 'layouts/social_button', icon: "google-plus", networkFriendlyName: "Google+"
+        = render 'layouts/social_button', icon: "google-plus", networkFriendlyName: "Google+" , counter: "gplusCount"
       .btn.btn-secondary.btn-social.btn-social-pinterest(ng-show="socialMediaItem()" ng-click="sharePinterest()")
-        = render 'layouts/social_button', icon: "pinterest", networkFriendlyName: "Pinterest"
+        = render 'layouts/social_button', icon: "pinterest", networkFriendlyName: "Pinterest", counter: "pinterestCount"
       .btn.btn-secondary.btn-social.btn-social-email(ng-click="shareEmail()")
         = render 'layouts/social_button', icon: "envelope", networkFriendlyName: "Email"
