[polls] disabled voting for closed polls

--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -93,6 +93,21 @@
     background: $light-gray
     color: gray
 
+.poll-item-btn-disabled
+  @include raleway
+  display: inline-block
+  text-align: center
+  width: 100%
+  height: 80px
+  padding: 5px
+  font-size: 30px
+  color: $light-gray
+  background: $offwhite
+  border: 0px
+  @include boxsizing
+  @include transition(all 200ms)
+  border-radius: 3px
+
 .poll-item-btn-social
   padding: 25px 0px
   h4
