--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -56,7 +56,7 @@
       cursor: pointer
 
   .social-group
-    > .btn
+    > .btn, .social-flat > .btn
       margin-top: 10px
     white-space: normal !important
 
