--- a/app/views/layouts/_social_button.html.haml
+++ b/app/views/layouts/_social_button.html.haml
@@ -1,8 +1,10 @@
 .social-button-contents
   .social-icon-group
     %i{class: "icon-#{icon}"}
-  %span
-    = networkFriendlyName
-  -if defined? counter
+  -if (split_name == 'no_counters')
     %span
-      {{#{counter}}}
+      = networkFriendlyName
+  -if (defined? counter) && (split_name != 'no_counters')
+    .social-counter
+      %span.text-center
+        {{#{counter}}}
