--- a/app/views/shared/_like_button.html.haml
+++ b/app/views/shared/_like_button.html.haml
@@ -10,6 +10,6 @@
         {{likes_count}}
     %span(ng-switch-when='false')
       .btn.btn-primary(ng-click="likeObject('#{likeable_object.class.to_s}', '#{likeable_object.id}')")
-        %i.icon-star-empty{onclick: "mixpanel.track('Liked', { 'Activity': #{likeable_object.title} }); mixpanel.people.set('liked': #{likeable_object.title});" }
+        %i.icon-star-empty
         %span(ng-show="likes_count > 0")
           {{likes_count}}
