--- a/app/views/layouts/_share_button.html.haml
+++ b/app/views/layouts/_share_button.html.haml
@@ -17,7 +17,7 @@
         .btn.btn-secondary.btn-social.btn-social-email(ng-click="shareEmail()")
           = render 'layouts/social_button', icon: "envelope", networkFriendlyName: "Email", split_name: split_name
 -else
-  .social-flat(ng-controller="SocialButtonsController" ng-init="split=\'#{split_name}\'" ng-class='split')
+  .social-flat(ng-controller="SocialButtonsController" ng-init="split=\'#{split_name}\'" ng-class='split' ng-cloak)
     -# Very hacky, clean this up if we end up with flat social out of the spit test
     -if (defined? likeable_object) && likeable_object
       - current_user_likes = current_user && current_user.likes_object?(likeable_object) ? 'true' : 'false'
@@ -32,10 +32,11 @@
           %span(ng-switch-when='false')
             .btn.btn-secondary.btn-social.btn-social-like(ng-click="likeObject('#{likeable_object.class.to_s}', '#{likeable_object.id}');")
               = render 'layouts/social_button', icon: "star-empty", networkFriendlyName: "Like", counter: "likes_count", split_name: split_name
-    .btn.btn-secondary.btn-social.btn-social-twitter(ng-click="shareTwitter();")
+    .btn.btn-secondary.btn-social.btn-social-twitter.relative(ng-click="shareTwitter();")
       = render 'layouts/social_button', icon: "twitter", networkFriendlyName: "Twitter", counter: "twitterCount", split_name: split_name
     .btn.btn-secondary.btn-social.btn-social-facebook(ng-click="shareFacebook()")
       = render 'layouts/social_button', icon: "facebook", networkFriendlyName: "Facebook", counter: "facebookCount", split_name: split_name
+    .new-line.hidden
     .btn.btn-secondary.btn-social.btn-social-pinterest(ng-show="socialMediaItem()" ng-click="sharePinterest()")
       = render 'layouts/social_button', icon: "pinterest", networkFriendlyName: "Pinterest", counter: "pinterestCount", split_name: split_name
     .btn.btn-secondary.btn-social.btn-social-gplus(ng-click="shareGooglePlus()")
