--- a/app/views/layouts/_social_button.html.haml
+++ b/app/views/layouts/_social_button.html.haml
@@ -1,10 +1,12 @@
-.social-button-contents
-  .social-icon-group
-    %i{class: "icon-#{icon}"}
-  -if (split_name == 'no_counters')
-    %span
-      = networkFriendlyName
-  -if (defined? counter) && (split_name != 'no_counters')
-    .social-counter
-      %span.text-center
-        {{#{counter}}}
+.social-button-contents.relative
+  .pulse-anim-before
+    .social-icon-group
+      %span
+        %i{class: "icon-#{icon}"}
+    -if (split_name == 'no_counters')
+      %span.network-name
+        = networkFriendlyName
+    -if (defined? counter) && (split_name != 'no_counters')
+      .social-counter
+        %span.text-center
+          {{#{counter}}}
