--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1108,6 +1108,9 @@ a:hover
   .social-button-contents
     display: inline-box
 
+  &:hover
+    background-color: $c
+
   .social-icon-group
     background-color: $c
 
