--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -45,7 +45,7 @@
                 %h3= project.title
               = project.description
     .span4
-      %h2.home-header Activity Stream
+      %h2.home-header Community Activity
       / .stream
       /   - @followings_stream.each do |event|
       /     - path_array = event.group_type.downcase.split('_')
