--- a/app/assets/stylesheets/stream.css.sass
+++ b/app/assets/stylesheets/stream.css.sass
@@ -18,3 +18,7 @@
         margin-left: 35px
         margin-top: 0px
         margin-bottom: 5px
+  .stream-more
+    float: left
+    width: 100%
+    margin-bottom: 20px
