--- a/app/views/stream_views/like_create.html.haml
+++ b/app/views/stream_views/like_create.html.haml
@@ -4,7 +4,7 @@
     %h4
       %div(ng-switch="stream.trackable.like.likeable_type")
         %div(ng-switch-when='Upload')
-          %a(ng-href="/profiles/{{stream.user.slug}}")
+          %a(ng-href="/profiles/{{stream.user.slug}}" onclick='track_viewed_profile_through_stream();')
             {{stream.user.name}}
           liked
           %a(ng-href="/profiles/{{stream.trackable.like.likeable.user.slug}}")
