--- a/app/views/stream_views/upload_create.html.haml
+++ b/app/views/stream_views/upload_create.html.haml
@@ -3,7 +3,7 @@
   .stream-item-dialogue
     %img(ng-src="{{userImageUrl(stream.user.image_id)}}")
     %h4
-      %a(ng-href="/profiles/{{stream.user.slug}}")
+      %a(ng-href="/profiles/{{stream.user.slug}}" onclick='track_viewed_profile_through_stream();')
         {{stream.user.name}}
       uploaded a photo
       %a(ng-href="/profiles/{{stream.trackable.upload.path}}")
