--- a/app/views/stream_views/comment_create.html.haml
+++ b/app/views/stream_views/comment_create.html.haml
@@ -5,11 +5,11 @@
       %a(ng-href="/profiles/{{stream.user.slug}}" onclick='track_viewed_profile_through_stream();')
         {{stream.user.name}}
       commented on
-      %a(ng-href="{{stream.trackable.comment.commentable.path}}")
+      %a(ng-href="{{stream.trackable.comment.commentable.path}}" onclick='track_viewed_item_through_stream();')
         {{stream.trackable.comment.commentable.title}}:
       "{{stream.trackable.comment.content}}"
       %small
         {{stream.created_at|date:'MMM d, yyyy @ h:mma'}}
   .stream-item-image
-    %a(ng-href="{{stream.trackable.comment.commentable.path}}")
+    %a(ng-href="{{stream.trackable.comment.commentable.path}}" onclick='track_viewed_item_through_stream();')
       %img(ng-src="{{mediaObjectImageUrl(stream.trackable.comment.commentable.featured_image)}}")
