--- a/app/views/stream_views/course_enroll.html.haml
+++ b/app/views/stream_views/course_enroll.html.haml
@@ -5,11 +5,11 @@
       %a(ng-href="/profiles/{{stream.user.slug}}" onclick='track_viewed_profile_through_stream();')
         {{stream.user.name}}
       enrolled into the
-      %a(ng-href="{{stream.trackable.course.path}}")
+      %a(ng-href="{{stream.trackable.course.path}}" onclick='track_viewed_item_through_stream();')
         {{stream.trackable.course.title}}
       Course.
       %small
         {{stream.created_at|date:'MMM d, yyyy @ h:mma'}}
   .stream-item-image
-    %a(ng-href="{{stream.trackable.course.path}}")
+    %a(ng-href="{{stream.trackable.course.path}}" onclick='track_viewed_item_through_stream();')
       %img(ng-src="{{mediaObjectImageUrl(stream.trackable.course.featured_image)}}")
