--- a/app/views/stream_views/activity_create.html.haml
+++ b/app/views/stream_views/activity_create.html.haml
@@ -1,4 +1,4 @@
-.stream-item
+.stream-item(ng-show="stream.trackable.activity.published")
   .stream-item-dialogue
     %img(ng-src="{{userImageUrl(stream.user.image_id)}}")
     %h4
