--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -68,3 +68,6 @@
                 = link_to [@course, @next_activity], class: 'btn btn-primary' do
                   = 'Next'
                   %i.icon-chevron-right
+
+:javascript
+  mixpanel.track('Activity Viewed', {'distinct_id' : "#{current_user ? current_user.id : nil}", 'context' : 'course', 'title' : "#{@activity.title}", 'slug' : "#{@activity.slug}"});
