--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -172,3 +172,8 @@
   = @activity.to_json
 
 
+:javascript
+  mixpanel.track('Activity Viewed', {'distinct_id' : "#{current_user ? current_user.id : nil}", 'context' : 'naked', 'title' : "#{@activity.title}", 'slug' : "#{@activity.slug}"});
+
+
+
