--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -18,9 +18,9 @@
           - if index == 0
             .home-featured-item
               = link_to course do
-                %h3= course.title
-                = image_tag filepicker_stream_image(course.featured_image)
-                .section.pull-right
+                %h3(onclick= 'track_viewed_course_through_signed_in_homepage();')= course.title
+                = image_tag filepicker_stream_image(course.featured_image), onclick: 'track_viewed_course_through_signed_in_homepage();'
+                .section.pull-right(onclick= 'track_viewed_course_through_signed_in_homepage();')
                   = where_user_left_off_in_course(course, current_user, 'btn btn-primary btn-large')
               .section
                 = course.short_description
