--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -60,3 +60,9 @@
   = javascript_include_tag 'application'
   = render 'layouts/app_init'
   = yield(:custom_js)
+
+
+-# This load on every page, so a convenient place to make sure mixpanel identity is known
+- if current_user
+  :javascript
+    mixpanel.identify("#{current_user.id}")
