[about] title tag

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -1,3 +1,7 @@
+- content_for :title, "About The Team"
+- content_for :description, "The ChefSteps team is here to help you become a better cook."
+- content_for :keywords, 'Recipes, Techniques, Courses, Food Science, Culinary School'
+
 .container.top-container
   .row
     %br
