--- a/app/views/layouts/_social_button.html.haml
+++ b/app/views/layouts/_social_button.html.haml
@@ -3,10 +3,7 @@
     .social-icon-group
       %span
         %i{class: "icon-#{icon}"}
-    -if (split_name == 'no_counters')
-      %span.network-name
-        = networkFriendlyName
-    -if (defined? counter) && (split_name != 'no_counters')
+    -if (defined? counter)
       .social-counter
         %span.text-center
           {{#{counter}}}
