--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1059,8 +1059,12 @@ a:hover
   width: 200px
   margin-right: 5px
 
+.btn-holder
+  position: relative
+  display: inline-block
+
 .btn-social
-  margin: 4px 2px 0px 2px
+  margin: 10px 2px 0px 2px
   background-color: white
   border-radius: 2px
   padding: 0px 0px 0px 0px
@@ -1069,7 +1073,6 @@ a:hover
 
   i
     color: white
-
 
   .social-button-contents
     display: inline-block
@@ -1094,7 +1097,7 @@ a:hover
   border:  1px solid $c
 
   .social-button-contents
-    display: inline-box
+    display: inline-block
 
   &:hover
     background-color: $c
