--- a/app/views/layouts/_share_button.html.haml
+++ b/app/views/layouts/_share_button.html.haml
@@ -8,18 +8,25 @@
       %span(ng-model="likes_count" ng-init="likes_count=#{likes_count}")
       %span(ng-switch on="current_user_likes")
         %span(ng-switch-when='true')
-          .btn.btn-secondary.btn-social.btn-social-like
-            = render 'layouts/social_button', icon: "star", networkFriendlyName: "Like", counter: "likes_count", split_name: split_name
+          .btn-holder
+            .btn.btn-secondary.btn-social.btn-social-like.pulse-anim-before
+              = render 'layouts/social_button', icon: "star", networkFriendlyName: "Like", counter: "likes_count", split_name: split_name
         %span(ng-switch-when='false')
-          .btn.btn-secondary.btn-social.btn-social-like(ng-click="likeObject('#{likeable_object.class.to_s}', '#{likeable_object.id}');")
-            = render 'layouts/social_button', icon: "star-empty", networkFriendlyName: "Like", counter: "likes_count", split_name: split_name
-  .btn.btn-secondary.btn-social.btn-social-twitter.relative(ng-click="shareTwitter();")
-    = render 'layouts/social_button', icon: "twitter", networkFriendlyName: "Twitter", counter: "twitterCount", split_name: split_name
-  .btn.btn-secondary.btn-social.btn-social-facebook(ng-click="shareFacebook()")
-    = render 'layouts/social_button', icon: "facebook", networkFriendlyName: "Facebook", counter: "facebookCount", split_name: split_name
-  .btn.btn-secondary.btn-social.btn-social-pinterest(ng-show="socialMediaItem()" ng-click="sharePinterest()")
-    = render 'layouts/social_button', icon: "pinterest", networkFriendlyName: "Pinterest", counter: "pinterestCount", split_name: split_name
-  .btn.btn-secondary.btn-social.btn-social-gplus(ng-click="shareGooglePlus()")
-    = render 'layouts/social_button', icon: "google-plus", networkFriendlyName: "Google+", split_name: split_name
-  .btn.btn-secondary.btn-social.btn-social-email(ng-click="shareEmail()")
-    = render 'layouts/social_button', icon: "envelope", networkFriendlyName: "Email", split_name: split_name
+          .btn-holder
+            .btn.btn-secondary.btn-social.btn-social-like.pulse-anim-before(ng-click="likeObject('#{likeable_object.class.to_s}', '#{likeable_object.id}');")
+              = render 'layouts/social_button', icon: "star-empty", networkFriendlyName: "Like", counter: "likes_count", split_name: split_name
+  .btn-holder
+    .btn.btn-secondary.btn-social.btn-social-twitter.pulse-anim-before(ng-click="shareTwitter();")
+      = render 'layouts/social_button', icon: "twitter", networkFriendlyName: "Twitter", counter: "twitterCount", split_name: split_name
+  .btn-holder
+    .btn.btn-secondary.btn-social.btn-social-facebook.pulse-anim-before(ng-click="shareFacebook()")
+      = render 'layouts/social_button', icon: "facebook", networkFriendlyName: "Facebook", counter: "facebookCount", split_name: split_name
+  .btn-holder
+    .btn.btn-secondary.btn-social.btn-social-pinterest.pulse-anim-before(ng-show="socialMediaItem()" ng-click="sharePinterest()")
+      = render 'layouts/social_button', icon: "pinterest", networkFriendlyName: "Pinterest", counter: "pinterestCount", split_name: split_name
+  .btn-holder
+    .btn.btn-secondary.btn-social.btn-social-gplus.pulse-anim-before(ng-click="shareGooglePlus()")
+      = render 'layouts/social_button', icon: "google-plus", networkFriendlyName: "Google+", split_name: split_name
+  .btn-holder
+    .btn.btn-secondary.btn-social.btn-social-email.pulse-anim-before(ng-click="shareEmail()")
+      = render 'layouts/social_button', icon: "envelope", networkFriendlyName: "Email", split_name: split_name
