--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1104,6 +1104,7 @@ a:hover
     .social-icon-group
       height: 100%
     border-radius:  0
+    text-shadow: none
 
 =btn-social-base($c)
   color: $c
